[gd_scene load_steps=8 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://assets/image/ibye.png" type="Texture" id=3]
[ext_resource path="res://assets/font/font.fnt" type="BitmapFont" id=4]
[ext_resource path="res://assets/video/v1_ge.webm" type="VideoStream" id=5]
[ext_resource path="res://assets/shader/ColorKeyPlus.gdshader" type="Shader" id=6]
[ext_resource path="res://assets/voice/v1_laugh.ogg" type="AudioStream" id=7]

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 6 )
shader_param/color = null
shader_param/range = 0.2

[node name="Game" type="CanvasLayer"]

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="RedAlert" type="ColorRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.576471, 0, 0, 1 )

[node name="ColorRect" type="ColorRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = 3.0
margin_right = -3.0
margin_bottom = -3.0
color = Color( 0, 0, 0, 1 )

[node name="IBye" type="TextureButton" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -420.0
margin_right = 44.0
margin_bottom = -356.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 4

[node name="VideoPlayer" type="VideoPlayer" parent="Control"]
visible = false
material = SubResource( 2 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -540.0
margin_top = -1080.0
margin_right = 540.0
stream = ExtResource( 5 )
expand = false

[node name="AudioClassic" type="AudioStreamPlayer" parent="Control"]
stream = ExtResource( 7 )

[node name="CC" type="CenterContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="Control/CC"]
margin_left = 156.0
margin_top = 252.0
margin_right = 924.0
margin_bottom = 828.0
rect_min_size = Vector2( 768, 576 )
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Start" type="Button" parent="Control/CC/Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -192.0
margin_top = -192.0
margin_right = 192.0
margin_bottom = -63.9999
custom_fonts/font = ExtResource( 4 )
text = "继续"

[node name="Label" type="Label" parent="Control/CC/Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -192.0
margin_right = 192.0
margin_bottom = 129.0
custom_fonts/font = ExtResource( 4 )
text = "找到隐藏的艾白"
align = 1
valign = 1

[node name="Text" type="RichTextLabel" parent="Control/CC/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -284.0
margin_top = -178.0
margin_right = 284.0
margin_bottom = -49.0
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
bbcode_text = "[center]你已找到[color=green]5[/color]只[/center]"
text = "你已找到5只"

[connection signal="resized" from="Control" to="Control" method="_on_Control_resized"]
[connection signal="mouse_entered" from="Control/IBye" to="Control" method="_on_IBye_mouse_entered"]
[connection signal="mouse_exited" from="Control/IBye" to="Control" method="_on_IBye_mouse_exited"]
[connection signal="pressed" from="Control/IBye" to="Control" method="_on_IBye_pressed"]
[connection signal="finished" from="Control/VideoPlayer" to="Control" method="_on_VideoPlayer_finished"]
[connection signal="pressed" from="Control/CC/Panel/Start" to="Control" method="_on_Start_pressed"]
